# todo-list-manager

./: README.md  main.py  pyproject.toml  result.json  results.json  task.py  tasklist.py
features/: todo_list.feature
features/steps/: todo_lists_steps.py
